# libromi

./: CMakeLists.txt
arduino_libraries/: CMakeLists.txt
arduino_libraries/RomiSerial/: EnvelopeParser.cpp  RSerial.cpp  Reader.h  RomiSerial.cpp  RomiSerialClient.cpp  RomiSerialClient.h  json.hpp
arduino_libraries/test/: CMakeLists.txt
arduino_libraries/test/src/: test_romiserial_arduino.cpp  test_romiserialclient.cpp
firmware/: CMakeLists.txt
firmware/Azhoo/: Average.h  Azhoo.cpp  Azhoo.h  AzhooCommands.cpp  AzhooCommands.h  AzhooTests.cpp  AzhooTests.h  IAzhoo.h  IFilter.h  PIController.h  Readme.md  SpeedEnvelope.h
firmware/BLDC/: BLDC.cpp  BLDC.h  BLDC.ino  Controller.cpp  pins.h
firmware/BatteryMonitor/: BatteryMonitor.ino  VeDirectFrameHandler.cpp  VeDirectFrameHandler.h
firmware/IMU/: BNO055.cpp  BNO055.h  IMU.h  IMU.ino  IMUCommands.cpp  IMUCommands.h  IMUVersion.h  Romi_Adafruit_BNO055.cpp  Romi_Adafruit_BNO055.h
firmware/Oquam/: Oquam.ino
firmware/Steering/: ArduinoUno.cpp  ArduinoUno.h  IEncoder.h  IncrementalEncoder.h  Steering.ino  block.h  config.h  stepper.cpp  stepper.h
firmware/SteeringOLD/: IncrementalEncoderUno.cpp  IncrementalEncoderUno.h  Steering.ino  stepper.cpp
firmware/StepperSteering/: ArduinoUno.cpp  StepperSteering.ino  config.h  stepper.cpp
libromi/: CMakeLists.txt
libromi/include/: IFolder.h  v3.h
libromi/include/api/: CNCRange.h  ConfigManager.h  DataLog.h  DataLogAccessor.h  EventTimer.h  GimbalRange.h  ICNC.h  ICamera.h  IConfigManager.h  IDataLog.h  IGimbal.h  IImagingDevice.h  IJoystick.h  IMotorDriver.h  INavigation.h  IRange.h  IRemoteStateInputDevice.h  Range.h  StateMachine.h
libromi/include/battery_monitor/: BatteryMonitor.h  IBatteryMonitor.h
libromi/include/cablebot/: Cablebot.h  CablebotBase.h  CablebotController.h  CablebotProgram.h  CablebotProgramIO.h  CablebotProgramList.h  CablebotProgramListAdaptor.h  CablebotRunner.h  FakeMotorController.h  ICablebotProgram.h  ICablebotProgramIO.h  ICablebotProgramList.h
libromi/include/camera/: CameraInfo.h  CameraInfoIO.h  CameraIntrinsics.h  CameraSettings.h  CameraWithConfig.h  FakeCamera.h  FakeImager.h  FileCamera.h  ICameraDistortion.h  ICameraInfo.h  ICameraInfoIO.h  ICameraIntrinsics.h  ICameraSettings.h  Imager.h  SimpleRadialDistortion.h  USBCamera.h
libromi/include/configuration/: ConfigurationProvider.h
libromi/include/cv/: ImageCropper.h  ImageIO.h
libromi/include/data_provider/: CNCLocationProvider.h  CameraMountLocationProvider.h  GpsLocationProvider.h  IIdentityProvider.h  ILocationProvider.h  JsonFieldNames.h  RomiDeviceData.h  RoverIdentityProvider.h
libromi/include/fake/: FakeCNC.h  FakeMotorDriver.h  FakeNavigation.h  FakeScriptEngine.h  FakeWeeder.h
libromi/include/hal/: BldcGimbal.h  BldcGimbalI2C.h  BrushMotorDriver.h  CNCAndGimbal.h  FakeGimbal.h  FakeI2C.h  I2C.h  ICameraMount.h  IDisplacementDevice.h  II2C.h  ImagingDevice.h
libromi/include/notifications/: DummyNotifications.h  FluidSoundNotifications.h
libromi/include/oquam/: FakeCNCController.h  Helix.h  ICNCController.h  Oquam.h  Section.h  StepperController.h  plotter.h  print.h
libromi/include/picamera/: BaseCamera.h  CameraComponent.h  EncoderComponent.h  ImageEncoder.h  MMAL.h  PiCamera.h  PiCameraSettings.h  StillCamera.h  VideoCamera.h  VideoEncoder.h
libromi/include/rover/: DifferentialSteering.h  DoubleSteering.h  EventsAndStates.h  IMUTrackFollower.h  INavigationController.h  ISteering.h  ISteeringController.h  L1NavigationController.h  LocationTracker.h  ManualTrackFollower.h  Navigation.h  NavigationSettings.h  PythonTrackFollower.h  Rover.h  RoverInterface.h  RoverScriptEngine.h  RoverStateMachine.h  SpeedController.h  SpeedConverter.h  SteeringController.h  SteeringData.h  StepperSteering.h  WheelOdometry.h  ZeroNavigationController.h
libromi/include/rpc/: CNCAdaptor.h  CameraAdaptor.h  CameraMountAdaptor.h  GimbalAdaptor.h  IRPCHandler.h  IScriptHub.h  MethodsCNC.h  MethodsCamera.h  MethodsCameraMount.h  MethodsGimbal.h  MethodsWeeder.h  NavigationAdaptor.h  RcomClient.h  RcomMessageHandler.h  RcomServer.h  RemoteCNC.h  RemoteCamera.h  RemoteCameraMount.h  RemoteFunctionCallNames.h  RemoteGimbal.h  RemoteNavigation.h  RemoteObjectsAdapter.h  RemoteObjectsAdaptor.h  RemoteStub.h  RemoteWeeder.h  ScriptHub.h  ScriptHubListener.h  WeederAdaptor.h
libromi/include/session/: IMetaFolder.h  ISession.h  MetaFolder.h  Session.h
libromi/include/ui/: Action.h  IScriptEngine.h  IScriptList.h  LinuxJoystick.h  RemoteStateInputDevice.h  Script.h  ScriptList.h
libromi/include/util/: AlarmClock.h  Clock.h  IAlarmClock.h  IAlarmClockListener.h  IClock.h  IThreadsafeQueue.h  Logger.h  RomiSerialLog.h  ThreadsafeQueue.h
libromi/src/api/: ActivityHelper.cpp  CNCRange.cpp  ConfigManager.cpp  DataLog.cpp  DataLogAccessor.cpp  GimbalRange.cpp  Path.cpp  Range.cpp
libromi/src/battery_monitor/: BatteryMonitor.cpp
libromi/src/cablebot/: Cablebot.cpp  CablebotBase.cpp  CablebotController.cpp  CablebotProgram.cpp  CablebotProgramIO.cpp  CablebotProgramList.cpp  CablebotProgramListAdaptor.cpp  CablebotRunner.cpp  FakeMotorController.cpp
libromi/src/camera/: CameraInfo.cpp  CameraInfoIO.cpp  CameraIntrinsics.cpp  CameraSettings.cpp  CameraWithConfig.cpp  FakeCamera.cpp  FileCamera.cpp  Imager.cpp  SimpleRadialDistortion.cpp  USBCamera.cpp  camera_v4l.cpp
libromi/src/configuration/: ConfigurationProvider.cpp  GetOpt.cpp
libromi/src/cv/: ConnectedComponentsImage.cpp  ImageCropper.cpp  ImageIO.cpp  cv.cpp
libromi/src/data_provider/: CNCLocationProvider.cpp  CameraMountLocationProvider.cpp  GpsLocationProvider.cpp  RomiDeviceData.cpp  RoverIdentityProvider.cpp  SoftwareVersion.cpp
libromi/src/fake/: FakeScriptEngine.cpp
libromi/src/hal/: BldcGimbal.cpp  BldcGimbalI2C.cpp  BrushMotorDriver.cpp  CNCAndGimbal.cpp  FakeGimbal.cpp  FakeI2C.cpp  I2C.cpp  ImagingDevice.cpp
libromi/src/notifications/: FluidSoundNotifications.cpp
libromi/src/oquam/: ATDC.cpp  Helix.cpp  Oquam.cpp  SmoothPath.cpp  StepperController.cpp  is_valid.cpp  (+2 more)
libromi/test/: CMakeLists.txt
(+319 files in other folders)
